# openvino_basic_practice

./: .gitignore  CMakeLists.txt  README.md  ov_practice1.cpp
more_steps/2/: CMakeLists.txt  README.md  ov_practice2.cpp
more_steps/3/: CMakeLists.txt  README.md  ov_practice3.cpp
more_steps/4/: CMakeLists.txt  README.md  ov_practice4.cpp
